--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "elliptic": "^6.5.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-modal": "^3.11.2",
     "react-scripts": "3.4.1",
     "websocket-extensions": "^0.1.4"
   },
